--- a/portfolio-body/index.html
+++ b/portfolio-body/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- SEO -->
-    <title>Junsung&#39;s Portfolio</title>
+    <title>Ellie&#39;s Portfolio</title>
     <meta
       name="description"
-      content="Portfolio for Junsung"
+      content="Portfolio for world-renowned software
+    engineer Ellie"
     />
-    <meta name="author" content="Junsung" />
+    <meta name="author" content="Ellie" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <!-- OG (Open Graph Data) -->
-    <meta property="og:title" content="준성의 포트폴리오" />
+    <meta property="og:title" content="엘리의 포트폴리오" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="배포후 생성된 URL" />
     <meta property="og:image" content="배포후에 생성된 이미지 URL" />
@@ -25,18 +26,21 @@
       rel="stylesheet"
     />
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/550497833c.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/9eb162ac0d.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- Javascript -->
     <script src="src/main.js" defer></script>
   </head>
   <body>
-     <!-- Header -->
-     <header>
+    <!-- Header -->
+    <header>
       <div>
         <img src="images/favicon.ico" alt="logo" />
-        <h1><a href="#">Jun</a></h1>
+        <h1><a href="#">Ellie</a></h1>
       </div>
       <nav>
         <ul>
@@ -44,6 +48,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#work">My work</a></li>
+          <li><a href="#testimonial">Testimonial</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -52,9 +57,9 @@
     <main>
       <!-- Home -->
       <section id="home">
-        <img src="images/profile.jpg" alt="Jun's profile" />
-        <h2>Hello I&#39;m Junsung</h2>
-        <p>Blockchain Valley Development member</p>
+        <img src="images/profile.png" alt="Ellie's profile" />
+        <h2>Hello I&#39;m Dream Coder, Ellie</h2>
+        <p>A software engineer currently residing in Sydney, Australia</p>
         <a href="#contact">Contact Me</a>
       </section>
       <!-- About -->
@@ -70,7 +75,7 @@
           <li>
             <i class="fa-brands fa-html5"></i>
             <p>Front-end</p>
-            <p>HTML, CSS, Javascript</p>
+            <p>HTML, CSS, JavaScript, TypeScript, React, Vue, Web APIs</p>
           </li>
           <li>
             <i class="fa-solid fa-mobile"></i>
@@ -85,17 +90,17 @@
         </ul>
         <ul>
           <li>
-            <img src="images/jobs/korea.png" alt="korea logo" />
+            <img src="images/jobs/google.png" alt="google logo" />
             <div>
-              <p>Department of Electrical and Electronic Engineering, Korea University</p>
-              <p>2018 Fev - Until now</p>
+              <p>Google as Senior Software Engineer</p>
+              <p>2019 Oct - Until now</p>
             </div>
           </li>
           <li>
             <img src="images/jobs/samsung.png" alt="samsung logo" />
             <div>
-              <p>Blockchain Valley Development Team Member</p>
-              <p>2023 Oct - Until now</p>
+              <p>Samsung as Software Engineer</p>
+              <p>2014 Sept - 2019 Oct</p>
             </div>
           </li>
         </ul>
@@ -115,8 +120,12 @@
             <h3>Coding Skills</h3>
             <ul>
               <li>
-                <div><span>HTML / CSS</span><span>80%</span></div>
-                <div><div style="width: 80%"></div></div>
+                <div><span>HTML</span><span>98%</span></div>
+                <div><div style="width: 98%"></div></div>
+              </li>
+              <li>
+                <div><span>CSS</span><span>90%</span></div>
+                <div><div style="width: 90%"></div></div>
               </li>
               <li>
                 <div><span>JavaScript</span><span>90%</span></div>
@@ -249,6 +258,50 @@
           </li>
         </ul>
       </section>
+      <!-- Testimonials -->
+      <section id="testimonial">
+        <h2>Testimonial</h2>
+        <p>See what they say about me</p>
+        <ul>
+          <li>
+            <img src="images/testimonials/people1.webp" alt="people1" />
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad
+                iusto, ea alias, at sit libero laboriosam eaque eum, reiciendis
+                obcaecati vitae non reprehenderit beatae officiis. Dolore
+                corporis eveniet labore.
+              </p>
+              <p><a href="#">James Kim</a> /Google</p>
+            </div>
+          </li>
+          <li>
+            <img src="images/testimonials/people2.webp" alt="people2" />
+            <div>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure
+                adipisci quibusdam perspiciatis neque consequuntur nostrum
+                quisquam dolore consequatur voluptatum animi laborum, sequi
+                ipsum rerum voluptatibus sit ab similique quos velit?
+              </p>
+              <p><a href="#">Anna Jin</a> /Samsung</p>
+            </div>
+          </li>
+          <li>
+            <img src="images/testimonials/people3.webp" alt="people3" />
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis, mollitia. Fugiat recusandae unde ducimus harum
+                voluptas earum reiciendis expedita inventore quas ab eum
+                dignissimos, maiores deleniti officiis qui, repudiandae
+                voluptatibus?
+              </p>
+              <p><a href="#">Anna Jin</a> /Samsung</p>
+            </div>
+          </li>
+        </ul>
+      </section>
       <!-- Arrow up -->
       <aside>
         <a href="#home" title="back to top">
@@ -258,20 +311,29 @@
     </main>
     <!-- Footer -->
     <footer id="contact">
-      <h2>Coffee Chat</h2>
-      <p>pantom0717@gmail.com</p>
+      <h2>Let&#39;s talk</h2>
+      <p>dream.coder.ellie@gmail.com</p>
       <ul>
         <li>
           <a
-            href="https://github.com/pantom0717"
+            href="https://github.com/dream-ellie"
             target="_blank"
             title="my github link"
           >
             <i class="fa-brands fa-github"></i>
           </a>
         </li>
+        <li>
+          <a
+            href="https://github.com/dream-ellie"
+            target="_blank"
+            title="my linkedin link"
+          >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </li>
       </ul>
-      <p>ⓒJun - All rights reserved</p>
+      <p>ⓒDream Coding Ellie - All rights reserved</p>
     </footer>
   </body>
 </html>
