--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
   </head>
   <body>
      <!-- Header -->
-     <header>
-      <div>
-        <img src="images/favicon.ico" alt="logo" />
-        <h1><a href="#">Jun</a></h1>
+     <header class="header">
+      <div class="header__logo">
+        <img class="header__logo__img" src="images/favicon.ico" alt="logo" />
+        <h1 class="header__logo__title"><a href="#">Jun</a></h1>
       </div>
       <nav>
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#work">My work</a></li>
-          <li><a href="#contact">Contact</a></li>
+        <ul class="header__menu">
+          <li><a class="header__menu__item active" href="#home">Home</a></li>
+          <li><a class="header__menu__item" href="#about">About</a></li>
+          <li><a class="header__menu__item" href="#skills">Skills</a></li>
+          <li><a class="header__menu__item" href="#work">My work</a></li>
+          <li><a class="header__menu__item" href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -52,217 +52,113 @@
     <main>
       <!-- Home -->
       <section id="home">
-        <img src="images/profile.jpg" alt="Jun's profile" />
-        <h2>Hello I&#39;m Junsung</h2>
-        <p>Blockchain Valley Development member</p>
-        <a href="#contact">Contact Me</a>
+        <img class="home__avatar " src="images/profile.jpg" alt="Jun's profile" />
+        <h2 class="home__title">Hello</h2>
+        <p class="home__description">Blockchain Valley Development member</p>
+        <a class="home__contact" href="#contact">Contact Me</a>
       </section>
       <!-- About -->
-      <section id="about">
-        <h2>About me</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam
-          repudiandae nemo nihil, similique quis hic! Numquam eligendi
-          cupiditate temporibus in qui sed, hic debitis minus, eum laborum
-          veritatis deserunt rem.
-        </p>
-        <ul>
-          <li>
-            <i class="fa-brands fa-html5"></i>
-            <p>Front-end</p>
+      <section id="about" class="section max-container" >
+        <h2 class = "title">About me</h2>
+        <p class="description">Developer</p>
+        <ul class="majors">
+          <li class="major">
+            <i class="fa-brands fa-html5 major__icon"></i>
+            <p class="major__title">Front-end</p>
             <p>HTML, CSS, Javascript</p>
           </li>
-          <li>
-            <i class="fa-solid fa-mobile"></i>
-            <p>Mobile</p>
-            <p>Android, iOS, React Navtive, Flutter, Java, Swift, Kotlin</p>
-          </li>
-          <li>
-            <i class="fa-solid fa-server"></i>
-            <p>Back-end</p>
-            <p>Java, JavaScript, Go, NodeJs, Rest APIs, GraphQL</p>
+          <li class="major">
+            <i class="fa-solid fa-robot major__icon"></i>
+            <p class="major__title">A.I</p>
+            <p>Python, tensorflow, pytorch, OpenCV</p>
           </li>
         </ul>
-        <ul>
-          <li>
-            <img src="images/jobs/korea.png" alt="korea logo" />
+        <ul class="jobs">
+          <li class="job">
+            <img class="job_image" src="images/jobs/korea.png" alt="korea logo" />
             <div>
-              <p>Department of Electrical and Electronic Engineering, Korea University</p>
-              <p>2018 Fev - Until now</p>
+              <p class="job__name">Department of Electrical and Electronic Engineering, Korea University</p>
+              <p class="job__period">2018 Fev - Until now</p>
             </div>
           </li>
-          <li>
-            <img src="images/jobs/samsung.png" alt="samsung logo" />
+          <li class="job">
+            <img class="job_image" src="images/jobs/buliding.png" alt="buliding logo" />
             <div>
-              <p>Blockchain Valley Development Team Member</p>
-              <p>2023 Oct - Until now</p>
+              <p class="job__name">Blockchain Valley Development Team Member</p>
+              <p class="job__period">2023 Oct - Until now</p>
             </div>
           </li>
         </ul>
       </section>
       <!-- Skills -->
-      <section id="skills">
-        <h2>My Skills</h2>
-        <p>Skills & Attributes</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias
-          doloremque sint deleniti vel quod itaque molestias, suscipit dolor
-          cupiditate saepe rem minima, amet ipsum accusantium architecto
-          laboriosam dolore id necessitatibus?
-        </p>
-        <div>
-          <section>
-            <h3>Coding Skills</h3>
+      <section id="skills" class="section">
+      <div class="max-container">
+        <h2 class="title">My Skills</h2>
+        <div class="skills">
+          <section class="skills__coding">
+            <h3 class="skills__title ">Coding Skills</h3>
             <ul>
-              <li>
-                <div><span>HTML / CSS</span><span>80%</span></div>
-                <div><div style="width: 80%"></div></div>
+              <li class="bar">
+                <div class="bar__metadata"><span>HTML</span><span>90%</span></div>
+                <div class="bar__bg"><div class="bar__value" style="width: 90%"></div></div>
               </li>
-              <li>
-                <div><span>JavaScript</span><span>90%</span></div>
-                <div><div style="width: 90%"></div></div>
+              <li class="bar">
+                <div class="bar__metadata"><span>CSS</span><span>80%</span></div>
+                <div class="bar__bg"><div class="bar__value" style="width: 80%"></div></div>
               </li>
-              <li>
-                <div><span>TypeScript</span><span>80%</span></div>
-                <div><div style="width: 80%"></div></div>
+              <li class="bar">
+                <div class="bar__metadata"><span>Javascript</span><span>75%</span></div>
+                <div class="bar__bg"><div class="bar__value" style="width: 75%"></div></div>
               </li>
-              <li>
-                <div><span>React</span><span>79%</span></div>
-                <div><div style="width: 79%"></div></div>
-              </li>
-              <li>
-                <div><span>NodeJs</span><span>68%</span></div>
-                <div><div style="width: 68%"></div></div>
+              <li class="bar">
+                <div class="bar__metadata"><span>Python</span><span>90%</span></div>
+                <div class="bar__bg"><div class="bar__value" style="width: 90%"></div></div>
               </li>
             </ul>
           </section>
-          <section>
-            <h3>Tools</h3>
+          <section class="skills__tools">
+            <h3 class="skills__title ">Tools</h3>
             <ul>
               <li>Visual Studio Code</li>
-              <li>IntelliJ</li>
-              <li>Android Studio Code</li>
-              <li>iOS development tools</li>
-              <li>Sketch app</li>
+              <li>Figma</li>
+              <li>Modelsim</li>
             </ul>
           </section>
-          <section>
-            <h3>Etc</h3>
+          <section class="skills__etc">
+            <h3 class="skills__title ">Etc</h3>
             <ul>
-              <li>Git</li>
-              <li>Scrum Master</li>
-              <li>Math</li>
+              <li>ROS</li>
+              <li>my SQL</li>
+              <li>Verliog</li>
             </ul>
           </section>
         </div>
+      </div>
       </section>
       <!-- Work -->
-      <section id="work">
-        <h2>My work</h2>
-        <p>Projects</p>
-        <ul>
-          <li>
-            <button>All <span>8</span></button>
-          </li>
-          <li>
-            <button>Front-end <span>3</span></button>
-          </li>
-          <li>
-            <button>Back-end <span>3</span></button>
-          </li>
-          <li>
-            <button>Mobile <span>2</span></button>
-          </li>
-        </ul>
-        <ul>
-          <li>
+      <section id="work" class="section">
+        <h2 class="title">My work</h2>
+        <ul class="projects">
+          <li class="project">
             <a href="#" target="_blank">
-              <img src="images/projects/project1.webp" alt="project1" />
-              <div>
-                <h3>Project #1</h3>
-                <p>Clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project2.webp" alt="project2" />
-              <div>
-                <h3>Project #2</h3>
-                <p>Clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project3.webp" alt="project3" />
-              <div>
-                <h3>Project #3</h3>
-                <p>Clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project4.webp" alt="project4" />
-              <div>
-                <h3>Project #4</h3>
-                <p>Clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project5.webp" alt="project5" />
-              <div>
-                <h3>Project #5</h3>
-                <p>Clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project6.webp" alt="project6" />
-              <div>
-                <h3>Project #6</h3>
-                <p>Clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project7.webp" alt="project7" />
-              <div>
-                <h3>Project #7</h3>
-                <p>Clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project8.webp" alt="project8" />
-              <div>
-                <h3>Project #8</h3>
-                <p>Clone Coding with HTML, CSS</p>
+              <img src="images/projects/Hamium.png" alt="project1" class="project__img" />
+              <div class="project__metadata">
+                <h3 class="project__title">Self-driving Temperature Measurement Robot, Based on Reinforcement Learning.</h3>
+                <p>Hanium_contest (21.2 ~ 11)</p>
               </div>
             </a>
           </li>
         </ul>
       </section>
-      <!-- Arrow up -->
-      <aside>
-        <a href="#home" title="back to top">
-          <i class="fa-solid fa-arrow-up"></i>
-        </a>
-      </aside>
     </main>
     <!-- Footer -->
-    <footer id="contact">
-      <h2>Coffee Chat</h2>
-      <p>pantom0717@gmail.com</p>
-      <ul>
+    <footer id="contact" class="section">
+    <div class="max"> 
+      <h2 class="title">Coffee Chat</h2>
+      <p class="description">pantom0717@gmail.com</p>
+      <ul class="contact__links">
         <li>
-          <a
+          <a class="contact__link"
             href="https://github.com/pantom0717"
             target="_blank"
             title="my github link"
@@ -272,6 +168,7 @@
         </li>
       </ul>
       <p>ⓒJun - All rights reserved</p>
+    </div>
     </footer>
   </body>
 </html>
