--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <h2 class="title">My work</h2>
         <ul class="projects">
           <li class="project">
-            <a href="#" target="_blank">
+            <a href="https://koreascience.kr/article/CFKO202133649145998.pdf" target="_blank">
               <img src="images/projects/Hamium.png" alt="project1" class="project__img" />
               <div class="project__metadata">
                 <h3 class="project__title">Self-driving Temperature Measurement Robot, Based on Reinforcement Learning.</h3>
