--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- OG (Open Graph Data) -->
     <meta property="og:title" content="준성의 포트폴리오" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://pantom0717.github.io/portfolio/" />
-    <meta property="og:image" content="https://pantom0717.github.io/portfolio/og.webp" />
+    <meta property="og:url" content="https://pantom0717.github.io/" />
+    <meta property="og:image" content="https://pantom0717.github.io/og.web" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
