--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="준성의 포트폴리오" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://pantom0717.github.io/" />
-    <meta property="og:image" content="https://pantom0717.github.io/og.web" />
+    <meta property="og:image" content="https://pantom0717.github.io/images/og.web" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
