--- a/index.html
+++ b/index.html
@@ -47,15 +47,21 @@
           <li><a class="header__menu__item" href="#contact">Contact</a></li>
         </ul>
       </nav>
+      <button class="header__toggle" aria-label="navigation menu toggle">
+        <i class="fa-solid fa-bars"></i>
+      </button>
     </header>
     <!-- Main -->
     <main>
       <!-- Home -->
       <section id="home">
-        <img class="home__avatar " src="images/profile.jpg" alt="Jun's profile" />
-        <h2 class="home__title">Hello</h2>
-        <p class="home__description">Blockchain Valley Development member</p>
-        <a class="home__contact" href="#contact">Contact Me</a>
+        <div class="home__container">
+          <img class="home__avatar " src="images/profile.jpg" alt="Jun's profile" />
+          <h2 class="home__title">Hello</h2>
+          <p class="home__description">Blockchain Valley Development member</p>
+          <a class="home__contact" href="#contact">Contact Me</a>
+        </div>
+
       </section>
       <!-- About -->
       <section id="about" class="section max-container" >
